--- a/asteroids/webplayer/index.html
+++ b/asteroids/webplayer/index.html
@@ -56,7 +56,7 @@
 						break;
 					}
 				});
-				u.initPlugin(jQuery("#unityPlayer")[0], "fellipesombra.github.io.unity3d");
+				u.initPlugin(jQuery("#unityPlayer")[0], "webplayer.unity3d");
 			});
 		-->
 		</script>
